# avmplus

./: .gitignore  .hgignore  CMakeLists.txt  configure.py
AVMPI/: AVMPI.h  AvmAssert.h  MMgcPortMac.cpp  MMgcPortWinRT.cpp  PosixMMgcPortUtils.cpp  SpyUtilsWin.cpp  SpyUtilsWinMo.cpp  float4Support.h
MMgc/: AllocationMacros.h  BasicList.h  FixedAlloc-inlines.h  FixedAlloc.cpp  FixedAlloc.h  FixedMalloc-inlines.h  FixedMalloc.cpp  FixedMalloc.h  GC-inlines.h  GC.h  GCAlloc-inlines.h  GCAlloc.cpp  GCAlloc.h  GCAllocObject.h  GCDebug.cpp  GCDebug.h  GCGlobalNew.cpp  GCGlobalNew.h  GCHashtable-inlines.h  GCHashtable.cpp  GCHashtable.h  GCHeap-inlines.h  GCHeap.cpp  GCHeap.h  GCLargeAlloc-inlines.h  GCLargeAlloc.h  GCLog.cpp  GCLog.h  GCMember-inlines.h  GCMemberBase.h  GCMemoryProfiler.h  GCObject.cpp  GCObject.h  GCPolicyManager-inlines.h  GCPolicyManager.h  GCRef-inlines.h  GCRef.h  GCSpinLock.h  GCStack-inlines.h  GCStack.h  (+17 more)
VMPI/: GenericPortUtils.cpp  MacPortUtils.cpp  PosixSpecificUtils.cpp  SymbianPortUtils.cpp  ThreadsPosix-inlines.h  ThreadsWin.cpp  UnixDebugUtils.cpp  VMPI.h  WinDebugUtils.cpp  WinPortUtils.cpp  WinRTDebugUtils.cpp
aot/: AOTCompiler.cpp  AOTStubs.cpp  AOTStubs.h  AOTStubs.py  AOTfields-begin.h  AOTfields-end.h
aot-compiler/: ThreadPool.h  aotverify.cpp  aotverify.h  compileabc.h  generate-offset-data.py  llvm-emitter.cpp  llvm-emitter.h  llvm-module.h  poolinfo.cpp  poolinfo.h  sha1.h  sha1_portable.cpp  structinfo.cpp  structinfo.h
core/: AbcEnv-inlines.h  AbcEnv.h  AbcParser-inlines.h  AbcParser.cpp  AbcParser.h  ActionBlockConstants.cpp  ActionBlockConstants.h  ArrayClass.h  ArrayObject-inlines.h  ArrayObject.h  AtomWriteBarrier-inlines.h  AtomWriteBarrier.h  AvmCore-inlines.h  AvmCore.h  AvmLog.cpp  AvmLog.h  AvmPlusScriptableObject.h  AvmSerializer.h  BigInteger.cpp  BigInteger.h  BitSet.h  BooleanClass.cpp  BooleanClass.h  BuiltinNatives.h  BuiltinTraits.h  ByteArrayGlue.cpp  ByteArrayGlue.h  CdeclThunk.h  Channels-inlines.h  Channels.h  ClassClass.h  ClassClosure-inlines.h  ClassClosure.cpp  ClassClosure.h  CodeContext.h  CodegenLIR-inlines.h  CodegenLIR.h  Coder-inlines.h  Coder.cpp  Coder.h  (+164 more)
doc/: apiversioning.html  selftest.html  verifier.html
doc/avmspec/: DoxygenLayout.xml
doc/mmgc/: blacklist.html  exactgc-architecture.html  exactgc-cookbook.html  exactgc-manual.html  exactgc-profilers.html  gc-memory-cookbook.html  gc-rules.html  index.html
eval/: eval-abc-inlines.h  eval-abc.h  eval-cogen-expr.cpp  eval-cogen-inlines.h  eval-cogen.h  eval-compile.cpp  eval-compile.h  eval-lex-inlines.h  eval-lex.h  eval-parse-config.cpp  eval-parse-inlines.h  eval-parse.cpp  eval-parse.h  eval-unicode.h  eval-util-inlines.h  eval-util.h  eval.h
extensions/: SamplerScript.h  Selftest.cpp
halfmoon/: hm-abcbuilder.cpp  hm-abcgraph.cpp  hm-algorithms.h  hm-bailout-stubs.h  hm-bailouts.cpp  hm-bailouts.h  hm-check.cpp  hm-cleaner.h  hm-constraints.h  hm-dead.cpp  hm-debug-inlines.h  hm-debug.cpp  hm-debug.h  hm-deoptimizer.h  hm-identityanalyzer.cpp  hm-inline.cpp  hm-inline.h  hm-instrfactory.h  hm-interpreter.cpp  hm-jitmanager.cpp  hm-models.cpp  hm-prettyprint.cpp  hm-prettyprint.h  hm-profiler.cpp  hm-schedulers.h  hm-specializer.cpp  hm-templatebuilder.h  hm-typeanalyzer.cpp  hm-types.h  hm-valnum.h
halfmoon/attic/: IR5.h
halfmoon/profiler/: profiler-jit_calls.h  profiler-methodprofile.cpp  profiler-methodprofile.h  profiler-profiledstate.cpp  profiler-types.h  profiler.h
halfmoon/templates/: mangle.py  templates.py
nanojit/: Allocator.h  Assembler.cpp  CodeAlloc.cpp  LIR.cpp  NativeARM.cpp  NativeMIPS.cpp  NativePPC.h  NativeSH4.h  NativeX64.h  Nativei386.cpp  Nativei386.h  RegAlloc.cpp  nanojit.h  njconfig.cpp  njconfig.h
objdir/: Makefile
other-licenses/lzma/: Bcj2.h  Bra.h  CpuArch.h  Lzma2Dec.h  LzmaDec.h  LzmaEnc.h  Threads.h  Types.h
other-licenses/valgrind/: memcheck.h  valgrind.h
other-licenses/wtf/: AddressSpaceRandomization.cpp  AddressSpaceRandomization.h  Atomics.h  CPU.h  Compiler.h  OS.h  ProcessID.h  SpinLock.h
other-licenses/zlib/: deflate.h  inftrees.h  mozzconf.h  zconf.h  zutil.h
pcre/: pcre.h  pcre_compile.cpp  pcre_config.cpp  pcre_dfa_exec.cpp  pcre_fullinfo.cpp  pcre_get.cpp  pcre_globals.cpp  pcre_internal.h  pcre_maketables.cpp  pcre_ucp_findchar.cpp  pcre_version.cpp  pcredemo.cpp  pcreposix.h  ucp.h  ucpinternal.h  ucptable.cpp
pcre2/include/: stdint.h
pcre2/src/: config.h  pcre2.h  pcre2_internal.h  stdint.h
platform/arm/: MathUtilsUnix-inlines.h  OSDepUnix.cpp
platform/mac/: mac-platform.h
platform/symbian/: SymbianHeap.cpp  symbian-platform.h
platform/unix/: unixcpuid.cpp
platform/win32/: NativeFunctionWin.cpp  OSDepWin.cpp  nanojit.cpp  win32cpuid.cpp  win32setjmp.cpp
platform/winrt/: OSDepWinRT.cpp
shell/: ConsoleOutputStream.cpp  ConsoleOutputStream.h  DebugCLI.cpp  DebugCLI.h  DomainClass.h  File.h  FileClass.cpp  FileInputStream.cpp  FileInputStream.h  Platform.h  PosixFile.cpp  ShellWorkerDomainGlue.h  ShellWorkerGlue.cpp  ShellWorkerGlue.h  SystemClass.cpp  SystemClass.h  avmshell-features.h  avmshell.cpp  avmshell.h  avmshellMac.cpp  avmshellUnix.cpp  shell_toplevel.py
src/AVMPI/: AvmAssert.cpp  AvmAssert.h  MMgcPortSymbian.cpp  MMgcPortUnix.cpp  MMgcPortWin.cpp  SpyUtilsPosix.cpp  SpyUtilsSymbian.cpp  SpyUtilsWinRT.cpp  float4Support.cpp  float4Support.h
src/MMgc/: AllocationMacros.h  BasicList.h  FixedAlloc-inlines.h  FixedAlloc.h  FixedMalloc-inlines.h  FixedMalloc.h  GC-inlines.h  GC.cpp  GC.h  GCAlloc-inlines.h  GCAlloc.h  GCAllocObject.cpp  GCAllocObject.h  GCGlobalNew.h  GCHashtable-inlines.h  GCHashtable.h  GCHeap-inlines.h  GCHeap.h  GCLargeAlloc-inlines.h  GCLargeAlloc.cpp  GCLargeAlloc.h  GCLog.h  GCMember-inlines.h  GCMemberBase.h  GCMemoryProfiler.cpp  GCMemoryProfiler.h  GCObject.h  GCPolicyManager-inlines.h  GCPolicyManager.cpp  GCPolicyManager.h  GCRef.h  (+21 more)
test/: runsmokes.py
utils/: avmdiff.py  exactgc.py  nativegen.py  sizereport.py  stitch.py
vmbase/: Safepoint.cpp  VMAssert.h  VMThread-inlines.h  VMThread.h  vmbase.h
vprof/: vprof.cpp
(+4982 files in other folders)
