cmake_minimum_required(VERSION 3.19)
project(avmplus)

set(CMAKE_CXX_STANDARD 14)

include_directories(aot)
include_directories(aot-compiler)
include_directories(AVMPI)
include_directories(core)
include_directories(eval)
include_directories(extensions)
include_directories(generated)
include_directories(gtest/gtest-1.6.0/fused-src/gtest)
include_directories(gtest/gtest-1.6.0/include)
include_directories(gtest/gtest-1.6.0/include/gtest)
include_directories(gtest/gtest-1.6.0/include/gtest/internal)
include_directories(gtest/gtest-1.6.0/samples)
include_directories(gtest/gtest-1.6.0/src)
include_directories(gtest/gtest-1.6.0/test)
include_directories(gtest/gtest-1.6.0/xcode/Samples/FrameworkSample)
include_directories(halfmoon)
include_directories(halfmoon/attic)
include_directories(halfmoon/generated)
include_directories(halfmoon/profiler)
include_directories(MMgc)
include_directories(nanojit)
include_directories(other-licenses/lzma)
include_directories(other-licenses/valgrind)
include_directories(other-licenses/wtf)
include_directories(other-licenses/zlib)
include_directories(pcre)
include_directories(pcre2/include)
include_directories(pcre2/src)
include_directories(pcre2/src/sljit)
include_directories(platform)
include_directories(platform/arm)
include_directories(platform/mac)
include_directories(platform/symbian)
include_directories(platform/unix)
include_directories(platform/win32)
include_directories(shell)
include_directories(utils/avmc)
include_directories(utils/nanojit-lirasm/VMPI.nj)
include_directories(utils/wmremote/avmremote)
include_directories(utils/wmremote/ceremotedeployer)
include_directories(utils/wmremote/ceremoteshell)
include_directories(utils/wmremote/wmrunner)
include_directories(vmbase)
include_directories(VMPI)
include_directories(vprof)

add_executable(avmplus
        aot/AOTCompiler.cpp
        aot/AOTCompiler.h
        aot/AOTfields-begin.h
        aot/AOTfields-end.h
        aot/AOTStubs.cpp
        aot/AOTStubs.h
        aot-compiler/aotverify.cpp
        aot-compiler/aotverify.h
        aot-compiler/compileabc.cpp
        aot-compiler/compileabc.h
        aot-compiler/llvm-emitter.cpp
        aot-compiler/llvm-emitter.h
        aot-compiler/llvm-module.cpp
        aot-compiler/llvm-module.h
        aot-compiler/poolinfo.cpp
        aot-compiler/poolinfo.h
        aot-compiler/sha1.h
        aot-compiler/sha1_portable.cpp
        aot-compiler/structinfo.cpp
        aot-compiler/structinfo.h
        aot-compiler/ThreadPool.h
        AVMPI/AvmAssert.cpp
        AVMPI/AvmAssert.h
        AVMPI/AVMPI.h
        AVMPI/float4Support.cpp
        AVMPI/float4Support.h
        AVMPI/MMgcPortMac.cpp
        AVMPI/MMgcPortSymbian.cpp
        AVMPI/MMgcPortUnix.cpp
        AVMPI/MMgcPortWin.cpp
        AVMPI/MMgcPortWinRT.cpp
        AVMPI/PosixMMgcPortUtils.cpp
        AVMPI/SpyUtilsPosix.cpp
        AVMPI/SpyUtilsSymbian.cpp
        AVMPI/SpyUtilsWin.cpp
        AVMPI/SpyUtilsWinMo.cpp
        AVMPI/SpyUtilsWinRT.cpp
        core/AbcData.cpp
        core/AbcEnv-inlines.h
        core/AbcEnv.cpp
        core/AbcEnv.h
        core/AbcParser-inlines.h
        core/AbcParser.cpp
        core/AbcParser.h
        core/ActionBlockConstants.cpp
        core/ActionBlockConstants.h
        core/api-versions.cpp
        core/api-versions.h
        core/ArrayClass.cpp
        core/ArrayClass.h
        core/ArrayObject-inlines.h
        core/ArrayObject.cpp
        core/ArrayObject.h
        core/atom-inlines.h
        core/atom.cpp
        core/atom.h
        core/AtomWriteBarrier-inlines.h
        core/AtomWriteBarrier.h
        core/avm.cpp
        core/avm.h
        core/avmbuild.h
        core/AvmCore-inlines.h
        core/AvmCore.cpp
        core/AvmCore.h
        core/avmfeatures.cpp
        core/avmfeatures.h
        core/AvmLog.cpp
        core/AvmLog.h
        core/avmplus.cpp
        core/avmplus.h
        core/avmplusContainer.h
        core/avmplusDebugger.cpp
        core/avmplusDebugger.h
        core/avmplusDebuggerStubs.cpp
        core/avmplusHashtable-inlines.h
        core/avmplusHashtable.cpp
        core/avmplusHashtable.h
        core/avmplusList-impl.h
        core/avmplusList-inlines.h
        core/avmplusList.cpp
        core/avmplusList.h
        core/avmplusProfiler.h
        core/AvmPlusScriptableObject.cpp
        core/AvmPlusScriptableObject.h
        core/avmplusStack.h
        core/avmplusVersion.h
        core/AvmSerializer.cpp
        core/AvmSerializer.h
        core/BigInteger.cpp
        core/BigInteger.h
        core/BitSet.h
        core/BooleanClass.cpp
        core/BooleanClass.h
        core/BuiltinNatives.h
        core/BuiltinTraits.cpp
        core/BuiltinTraits.h
        core/ByteArrayGlue.cpp
        core/ByteArrayGlue.h
        core/CdeclThunk.cpp
        core/CdeclThunk.h
        core/Channels-inlines.h
        core/Channels.cpp
        core/Channels.h
        core/ClassClass.cpp
        core/ClassClass.h
        core/ClassClosure-inlines.h
        core/ClassClosure.cpp
        core/ClassClosure.h
        core/CodeContext.h
        core/CodegenLIR-inlines.h
        core/CodegenLIR.cpp
        core/CodegenLIR.h
        core/Coder-inlines.h
        core/Coder.cpp
        core/Coder.h
        core/ConcurrencyGlue.cpp
        core/ConcurrencyGlue.h
        core/d2a.cpp
        core/d2a.h
        core/DataIO.cpp
        core/DataIO.h
        core/Date.cpp
        core/Date.h
        core/DateClass.cpp
        core/DateClass.h
        core/DateObject.cpp
        core/DateObject.h
        core/Deopt-CL.cpp
        core/Deopt-CL.h
        core/Deopt.cpp
        core/Deopt.h
        core/DescribeTypeClass.cpp
        core/DescribeTypeClass.h
        core/DictionaryGlue.cpp
        core/DictionaryGlue.h
        core/Domain.cpp
        core/Domain.h
        core/DomainEnv.cpp
        core/DomainEnv.h
        core/DomainMgr.cpp
        core/DomainMgr.h
        core/E4XNode-inlines.h
        core/E4XNode.cpp
        core/E4XNode.h
        core/ErrorClass.cpp
        core/ErrorClass.h
        core/ErrorConstants.cpp
        core/ErrorConstants.h
        core/ExactGCTests.h
        core/Exception.cpp
        core/Exception.h
        core/exec-inlines.h
        core/exec-jit.cpp
        core/exec-osr.cpp
        core/exec-osr.h
        core/exec-verifyall.cpp
        core/exec.cpp
        core/exec.h
        core/FixedHeapUtils-inlines.h
        core/FixedHeapUtils.cpp
        core/FixedHeapUtils.h
        core/Float4Class.cpp
        core/Float4Class.h
        core/FloatClass.cpp
        core/FloatClass.h
        core/FrameState-inlines.h
        core/FrameState.cpp
        core/FrameState.h
        core/FunctionClass.cpp
        core/FunctionClass.h
        core/hm-aot-helpers.cpp
        core/instr-inlines.h
        core/instr.cpp
        core/instr.h
        core/IntClass.cpp
        core/IntClass.h
        core/Interpreter.cpp
        core/Interpreter.h
        core/InvokerCompiler.cpp
        core/InvokerCompiler.h
        core/Isolate-inlines.h
        core/Isolate.cpp
        core/Isolate.h
        core/ITelemetry.h
        core/jit-calls.h
        core/JSONClass.cpp
        core/JSONClass.h
        core/LirHelper-Emitters.h
        core/LirHelper-inlines.h
        core/LirHelper.cpp
        core/LirHelper.h
        core/MathClass.cpp
        core/MathClass.h
        core/MathUtils-inlines.h
        core/MathUtils.cpp
        core/MathUtils.h
        core/MethodClosure.cpp
        core/MethodClosure.h
        core/MethodEnv-inlines.h
        core/MethodEnv.cpp
        core/MethodEnv.h
        core/MethodInfo-inlines.h
        core/MethodInfo.cpp
        core/MethodInfo.h
        core/Multiname-inlines.h
        core/Multiname.cpp
        core/Multiname.h
        core/MultinameHashtable-impl.h
        core/MultinameHashtable-inlines.h
        core/MultinameHashtable.cpp
        core/MultinameHashtable.h
        core/Namespace.cpp
        core/Namespace.h
        core/NamespaceClass.cpp
        core/NamespaceClass.h
        core/NamespaceSet-inlines.h
        core/NamespaceSet.cpp
        core/NamespaceSet.h
        core/NativeFunction.cpp
        core/NativeFunction.h
        core/NativeObjectHelpers.h
        core/NumberClass.cpp
        core/NumberClass.h
        core/ObjectClass.cpp
        core/ObjectClass.h
        core/ObjectIO.cpp
        core/ObjectIO.h
        core/OSDep.h
        core/OutputStream.h
        core/peephole.cpp
        core/PoolObject-inlines.h
        core/PoolObject.cpp
        core/PoolObject.h
        core/PrintWriter.cpp
        core/PrintWriter.h
        core/PromiseChannelGlue.cpp
        core/PromiseChannelGlue.h
        core/ProxyGlue.cpp
        core/ProxyGlue.h
        core/QCache.cpp
        core/QCache.h
        core/RegExp.cpp
        core/RegExp.h
        core/RegExpClass.cpp
        core/RegExpClass.h
        core/RegExpObject.cpp
        core/RegExpObject.h
        core/Sampler.cpp
        core/Sampler.h
        core/ScopeChain-inlines.h
        core/ScopeChain.cpp
        core/ScopeChain.h
        core/ScriptBuffer.cpp
        core/ScriptBuffer.h
        core/ScriptObject-inlines.h
        core/ScriptObject.cpp
        core/ScriptObject.h
        core/SortedMap.h
        core/StackTrace.cpp
        core/StackTrace.h
        core/StringBuffer.cpp
        core/StringBuffer.h
        core/StringClass.cpp
        core/StringClass.h
        core/StringObject.cpp
        core/StringObject.h
        core/Toplevel-inlines.h
        core/Toplevel.cpp
        core/Toplevel.h
        core/Traits-inlines.h
        core/Traits.cpp
        core/Traits.h
        core/TraitsIterator.h
        core/TypeDescriber.cpp
        core/TypeDescriber.h
        core/UnicodeUtils.cpp
        core/UnicodeUtils.h
        core/VectorClass-impl.h
        core/VectorClass-inlines.h
        core/VectorClass.cpp
        core/VectorClass.h
        core/Verifier-inlines.h
        core/Verifier.cpp
        core/Verifier.h
        core/VTable-inlines.h
        core/VTable.cpp
        core/VTable.h
        core/wopcodes.cpp
        core/wopcodes.h
        core/WordcodeEmitter.cpp
        core/WordcodeEmitter.h
        core/WordcodeTranslator.cpp
        core/WordcodeTranslator.h
        core/XMLClass.cpp
        core/XMLClass.h
        core/XMLListClass.cpp
        core/XMLListClass.h
        core/XMLListObject.cpp
        core/XMLListObject.h
        core/XMLObject.cpp
        core/XMLObject.h
        core/XMLParser16.cpp
        core/XMLParser16.h
        eval/eval-abc-inlines.h
        eval/eval-abc.cpp
        eval/eval-abc.h
        eval/eval-avmplus.cpp
        eval/eval-avmplus.h
        eval/eval-cogen-expr.cpp
        eval/eval-cogen-inlines.h
        eval/eval-cogen-stmt.cpp
        eval/eval-cogen.cpp
        eval/eval-cogen.h
        eval/eval-compile.cpp
        eval/eval-compile.h
        eval/eval-lex-inlines.h
        eval/eval-lex-xml.cpp
        eval/eval-lex.cpp
        eval/eval-lex.h
        eval/eval-parse-config.cpp
        eval/eval-parse-expr.cpp
        eval/eval-parse-inlines.h
        eval/eval-parse-stmt.cpp
        eval/eval-parse-xml.cpp
        eval/eval-parse.cpp
        eval/eval-parse.h
        eval/eval-unicode.cpp
        eval/eval-unicode.h
        eval/eval-util-inlines.h
        eval/eval-util.cpp
        eval/eval-util.h
        eval/eval.h
        eval/generate-unicode-tables.c
        extensions/SamplerScript.cpp
        extensions/SamplerScript.h
        extensions/Selftest.cpp
        extensions/Selftest.h
        extensions/SelftestClasses.h
        extensions/SelftestExec.cpp
        extensions/SelftestInit.cpp
        generated/avmplus-tracers.h
        generated/avmplus-tracers.hh
        generated/avmshell-tracers.h
        generated/avmshell-tracers.hh
        generated/builtin-classes.hh
        generated/builtin.cpp
        generated/builtin.h
        generated/builtin_aotslots.hh
        generated/builtin_aotslots_64.hh
        generated/extensions-tracers.h
        generated/extensions-tracers.hh
        generated/shell_toplevel-classes.hh
        generated/shell_toplevel.cpp
        generated/shell_toplevel.h
        generated/shell_toplevel_aotslots.hh
        generated/shell_toplevel_aotslots_64.hh
        gtest/gtest-1.6.0/codegear/gtest_all.cc
        gtest/gtest-1.6.0/codegear/gtest_link.cc
        gtest/gtest-1.6.0/fused-src/gtest/gtest-all.cc
        gtest/gtest-1.6.0/fused-src/gtest/gtest.h
        gtest/gtest-1.6.0/fused-src/gtest/gtest_main.cc
        gtest/gtest-1.6.0/include/gtest/internal/gtest-death-test-internal.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-filepath.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-internal.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-linked_ptr.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-param-util-generated.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-param-util.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-port.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-string.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-tuple.h
        gtest/gtest-1.6.0/include/gtest/internal/gtest-type-util.h
        gtest/gtest-1.6.0/include/gtest/gtest-death-test.h
        gtest/gtest-1.6.0/include/gtest/gtest-message.h
        gtest/gtest-1.6.0/include/gtest/gtest-param-test.h
        gtest/gtest-1.6.0/include/gtest/gtest-printers.h
        gtest/gtest-1.6.0/include/gtest/gtest-spi.h
        gtest/gtest-1.6.0/include/gtest/gtest-test-part.h
        gtest/gtest-1.6.0/include/gtest/gtest-typed-test.h
        gtest/gtest-1.6.0/include/gtest/gtest.h
        gtest/gtest-1.6.0/include/gtest/gtest_pred_impl.h
        gtest/gtest-1.6.0/include/gtest/gtest_prod.h
        gtest/gtest-1.6.0/samples/prime_tables.h
        gtest/gtest-1.6.0/samples/sample1.cc
        gtest/gtest-1.6.0/samples/sample1.h
        gtest/gtest-1.6.0/samples/sample10_unittest.cc
        gtest/gtest-1.6.0/samples/sample1_unittest.cc
        gtest/gtest-1.6.0/samples/sample2.cc
        gtest/gtest-1.6.0/samples/sample2.h
        gtest/gtest-1.6.0/samples/sample2_unittest.cc
        gtest/gtest-1.6.0/samples/sample3-inl.h
        gtest/gtest-1.6.0/samples/sample3_unittest.cc
        gtest/gtest-1.6.0/samples/sample4.cc
        gtest/gtest-1.6.0/samples/sample4.h
        gtest/gtest-1.6.0/samples/sample4_unittest.cc
        gtest/gtest-1.6.0/samples/sample5_unittest.cc
        gtest/gtest-1.6.0/samples/sample6_unittest.cc
        gtest/gtest-1.6.0/samples/sample7_unittest.cc
        gtest/gtest-1.6.0/samples/sample8_unittest.cc
        gtest/gtest-1.6.0/samples/sample9_unittest.cc
        gtest/gtest-1.6.0/src/gtest-all.cc
        gtest/gtest-1.6.0/src/gtest-death-test.cc
        gtest/gtest-1.6.0/src/gtest-filepath.cc
        gtest/gtest-1.6.0/src/gtest-internal-inl.h
        gtest/gtest-1.6.0/src/gtest-port.cc
        gtest/gtest-1.6.0/src/gtest-printers.cc
        gtest/gtest-1.6.0/src/gtest-test-part.cc
        gtest/gtest-1.6.0/src/gtest-typed-test.cc
        gtest/gtest-1.6.0/src/gtest.cc
        gtest/gtest-1.6.0/src/gtest_main.cc
        gtest/gtest-1.6.0/test/gtest-death-test_ex_test.cc
        gtest/gtest-1.6.0/test/gtest-death-test_test.cc
        gtest/gtest-1.6.0/test/gtest-filepath_test.cc
        gtest/gtest-1.6.0/test/gtest-linked_ptr_test.cc
        gtest/gtest-1.6.0/test/gtest-listener_test.cc
        gtest/gtest-1.6.0/test/gtest-message_test.cc
        gtest/gtest-1.6.0/test/gtest-options_test.cc
        gtest/gtest-1.6.0/test/gtest-param-test2_test.cc
        gtest/gtest-1.6.0/test/gtest-param-test_test.cc
        gtest/gtest-1.6.0/test/gtest-param-test_test.h
        gtest/gtest-1.6.0/test/gtest-port_test.cc
        gtest/gtest-1.6.0/test/gtest-printers_test.cc
        gtest/gtest-1.6.0/test/gtest-test-part_test.cc
        gtest/gtest-1.6.0/test/gtest-tuple_test.cc
        gtest/gtest-1.6.0/test/gtest-typed-test2_test.cc
        gtest/gtest-1.6.0/test/gtest-typed-test_test.cc
        gtest/gtest-1.6.0/test/gtest-typed-test_test.h
        gtest/gtest-1.6.0/test/gtest-unittest-api_test.cc
        gtest/gtest-1.6.0/test/gtest_all_test.cc
        gtest/gtest-1.6.0/test/gtest_break_on_failure_unittest_.cc
        gtest/gtest-1.6.0/test/gtest_catch_exceptions_test_.cc
        gtest/gtest-1.6.0/test/gtest_color_test_.cc
        gtest/gtest-1.6.0/test/gtest_env_var_test_.cc
        gtest/gtest-1.6.0/test/gtest_environment_test.cc
        gtest/gtest-1.6.0/test/gtest_filter_unittest_.cc
        gtest/gtest-1.6.0/test/gtest_help_test_.cc
        gtest/gtest-1.6.0/test/gtest_list_tests_unittest_.cc
        gtest/gtest-1.6.0/test/gtest_main_unittest.cc
        gtest/gtest-1.6.0/test/gtest_no_test_unittest.cc
        gtest/gtest-1.6.0/test/gtest_output_test_.cc
        gtest/gtest-1.6.0/test/gtest_pred_impl_unittest.cc
        gtest/gtest-1.6.0/test/gtest_prod_test.cc
        gtest/gtest-1.6.0/test/gtest_repeat_test.cc
        gtest/gtest-1.6.0/test/gtest_shuffle_test_.cc
        gtest/gtest-1.6.0/test/gtest_sole_header_test.cc
        gtest/gtest-1.6.0/test/gtest_stress_test.cc
        gtest/gtest-1.6.0/test/gtest_throw_on_failure_ex_test.cc
        gtest/gtest-1.6.0/test/gtest_throw_on_failure_test_.cc
        gtest/gtest-1.6.0/test/gtest_uninitialized_test_.cc
        gtest/gtest-1.6.0/test/gtest_unittest.cc
        gtest/gtest-1.6.0/test/gtest_xml_outfile1_test_.cc
        gtest/gtest-1.6.0/test/gtest_xml_outfile2_test_.cc
        gtest/gtest-1.6.0/test/gtest_xml_output_unittest_.cc
        gtest/gtest-1.6.0/test/production.cc
        gtest/gtest-1.6.0/test/production.h
        gtest/gtest-1.6.0/xcode/Samples/FrameworkSample/widget.cc
        gtest/gtest-1.6.0/xcode/Samples/FrameworkSample/widget.h
        gtest/gtest-1.6.0/xcode/Samples/FrameworkSample/widget_test.cc
        gtest/gtest-all.cpp
        gtest/gtest_main.cpp
        halfmoon/attic/add.cpp
        halfmoon/attic/HalfMoonIR.h
        halfmoon/attic/IR5.h
        halfmoon/generated/InstrFactory_buildTemplate_cases.hh
        halfmoon/generated/InstrFactory_defs_impl.hh
        halfmoon/generated/InstrFactory_defs_proto.hh
        halfmoon/generated/InstrFactory_preds_impl.hh
        halfmoon/generated/InstrFactory_preds_proto.hh
        halfmoon/generated/InstrFactory_signatures_impl.hh
        halfmoon/generated/KindAdapter_cases.hh
        halfmoon/generated/KindAdapter_methods.hh
        halfmoon/generated/ShapeAdapter_cases.hh
        halfmoon/generated/ShapeAdapter_methods.hh
        halfmoon/generated/Stub_callers.hh
        halfmoon/generated/Stub_lirtable.hh
        halfmoon/generated/Stub_llvmtable.hh
        halfmoon/generated/Stub_llvmtable_64.hh
        halfmoon/generated/Stub_protos.hh
        halfmoon/profiler/profiler-jit_calls.h
        halfmoon/profiler/profiler-liremitter.cpp
        halfmoon/profiler/profiler-main.h
        halfmoon/profiler/profiler-methodprofile.cpp
        halfmoon/profiler/profiler-methodprofile.h
        halfmoon/profiler/profiler-profiledstate.cpp
        halfmoon/profiler/profiler-profiledstate.h
        halfmoon/profiler/profiler-types.h
        halfmoon/profiler/profiler.h
        halfmoon/halfmoon.h
        halfmoon/hm-abcbuilder.cpp
        halfmoon/hm-abcbuilder.h
        halfmoon/hm-abcgraph.cpp
        halfmoon/hm-abcgraph.h
        halfmoon/hm-algorithms.h
        halfmoon/hm-bailout-stubs.h
        halfmoon/hm-bailouts.cpp
        halfmoon/hm-bailouts.h
        halfmoon/hm-check.cpp
        halfmoon/hm-check.h
        halfmoon/hm-cleaner.cpp
        halfmoon/hm-cleaner.h
        halfmoon/hm-constraints.cpp
        halfmoon/hm-constraints.h
        halfmoon/hm-dead.cpp
        halfmoon/hm-dead.h
        halfmoon/hm-debug-inlines.h
        halfmoon/hm-debug.cpp
        halfmoon/hm-debug.h
        halfmoon/hm-deoptimizer.cpp
        halfmoon/hm-deoptimizer.h
        halfmoon/hm-dispatch.h
        halfmoon/hm-dominatortree.cpp
        halfmoon/hm-dominatortree.h
        halfmoon/hm-exec.cpp
        halfmoon/hm-identityanalyzer.cpp
        halfmoon/hm-identityanalyzer.h
        halfmoon/hm-inline.cpp
        halfmoon/hm-inline.h
        halfmoon/hm-instr.h
        halfmoon/hm-instrfactory.cpp
        halfmoon/hm-instrfactory.h
        halfmoon/hm-instrgraph.cpp
        halfmoon/hm-instrgraph.h
        halfmoon/hm-interpreter.cpp
        halfmoon/hm-interpreter.h
        halfmoon/hm-jitfriend.h
        halfmoon/hm-jitmanager.cpp
        halfmoon/hm-jitmanager.h
        halfmoon/hm-jitwriter.cpp
        halfmoon/hm-liremitter.cpp
        halfmoon/hm-liremitter.h
        halfmoon/hm-main.cpp
        halfmoon/hm-main.h
        halfmoon/hm-models.cpp
        halfmoon/hm-models.h
        halfmoon/hm-prettyprint.cpp
        halfmoon/hm-prettyprint.h
        halfmoon/hm-profiler.cpp
        halfmoon/hm-profiler.h
        halfmoon/hm-schedulers.cpp
        halfmoon/hm-schedulers.h
        halfmoon/hm-specializer.cpp
        halfmoon/hm-specializer.h
        halfmoon/hm-stubs.cpp
        halfmoon/hm-templatebuilder.cpp
        halfmoon/hm-templatebuilder.h
        halfmoon/hm-typeanalyzer.cpp
        halfmoon/hm-typeanalyzer.h
        halfmoon/hm-typeinference.cpp
        halfmoon/hm-typeinference.h
        halfmoon/hm-types.cpp
        halfmoon/hm-types.h
        halfmoon/hm-util.h
        halfmoon/hm-valnum.cpp
        halfmoon/hm-valnum.h
        MMgc/AllocationMacros.h
        MMgc/BasicList.h
        MMgc/FixedAlloc-inlines.h
        MMgc/FixedAlloc.cpp
        MMgc/FixedAlloc.h
        MMgc/FixedMalloc-inlines.h
        MMgc/FixedMalloc.cpp
        MMgc/FixedMalloc.h
        MMgc/GC-inlines.h
        MMgc/GC.cpp
        MMgc/GC.h
        MMgc/GCAlloc-inlines.h
        MMgc/GCAlloc.cpp
        MMgc/GCAlloc.h
        MMgc/GCAllocObject.cpp
        MMgc/GCAllocObject.h
        MMgc/GCDebug.cpp
        MMgc/GCDebug.h
        MMgc/GCGlobalNew.cpp
        MMgc/GCGlobalNew.h
        MMgc/GCHashtable-inlines.h
        MMgc/GCHashtable.cpp
        MMgc/GCHashtable.h
        MMgc/GCHeap-inlines.h
        MMgc/GCHeap.cpp
        MMgc/GCHeap.h
        MMgc/GCLargeAlloc-inlines.h
        MMgc/GCLargeAlloc.cpp
        MMgc/GCLargeAlloc.h
        MMgc/GCLog.cpp
        MMgc/GCLog.h
        MMgc/GCMember-inlines.h
        MMgc/GCMemberBase.h
        MMgc/GCMemoryProfiler.cpp
        MMgc/GCMemoryProfiler.h
        MMgc/GCObject.cpp
        MMgc/GCObject.h
        MMgc/GCPolicyManager-inlines.h
        MMgc/GCPolicyManager.cpp
        MMgc/GCPolicyManager.h
        MMgc/GCRef-inlines.h
        MMgc/GCRef.h
        MMgc/GCSpinLock.h
        MMgc/GCStack-inlines.h
        MMgc/GCStack.cpp
        MMgc/GCStack.h
        MMgc/GCTests.cpp
        MMgc/GCTests.h
        MMgc/GCThreadLocal.h
        MMgc/GCThreads.cpp
        MMgc/GCThreads.h
        MMgc/GCTypes.h
        MMgc/GCWeakRef.h
        MMgc/HeapGraph.h
        MMgc/MMgc.h
        MMgc/OOM.h
        MMgc/PageMap-inlines.h
        MMgc/PageMap.cpp
        MMgc/PageMap.h
        MMgc/Shared-inlines.h
        MMgc/StaticAssert.h
        MMgc/TypeTraits.h
        MMgc/WriteBarrier-inlines.h
        MMgc/WriteBarrier.h
        MMgc/ZCT-inlines.h
        MMgc/ZCT.cpp
        MMgc/ZCT.h
        nanojit/Allocator.cpp
        nanojit/Allocator.h
        nanojit/Assembler.cpp
        nanojit/Assembler.h
        nanojit/CodeAlloc.cpp
        nanojit/CodeAlloc.h
        nanojit/Containers.cpp
        nanojit/Containers.h
        nanojit/Fragmento.cpp
        nanojit/Fragmento.h
        nanojit/LIR.cpp
        nanojit/LIR.h
        nanojit/nanojit.h
        nanojit/Native.h
        nanojit/NativeARM.cpp
        nanojit/NativeARM.h
        nanojit/NativeCommon.h
        nanojit/Nativei386.cpp
        nanojit/Nativei386.h
        nanojit/NativeMIPS.cpp
        nanojit/NativeMIPS.h
        nanojit/NativePPC.cpp
        nanojit/NativePPC.h
        nanojit/NativeSH4-auto-generated.h
        nanojit/NativeSH4.cpp
        nanojit/NativeSH4.h
        nanojit/NativeSparc.cpp
        nanojit/NativeSparc.h
        nanojit/NativeThumb2.cpp
        nanojit/NativeThumb2.h
        nanojit/NativeX64.cpp
        nanojit/NativeX64.h
        nanojit/njconfig.cpp
        nanojit/njconfig.h
        nanojit/njcpudetect.h
        nanojit/RegAlloc.cpp
        nanojit/RegAlloc.h
        other-licenses/lzma/Alloc.c
        other-licenses/lzma/Alloc.h
        other-licenses/lzma/Bcj2.c
        other-licenses/lzma/Bcj2.h
        other-licenses/lzma/Bra.c
        other-licenses/lzma/Bra.h
        other-licenses/lzma/Bra86.c
        other-licenses/lzma/BraIA64.c
        other-licenses/lzma/CpuArch.c
        other-licenses/lzma/CpuArch.h
        other-licenses/lzma/LzFind.c
        other-licenses/lzma/LzFind.h
        other-licenses/lzma/LzHash.h
        other-licenses/lzma/Lzma2Dec.c
        other-licenses/lzma/Lzma2Dec.h
        other-licenses/lzma/LzmaDec.c
        other-licenses/lzma/LzmaDec.h
        other-licenses/lzma/LzmaEnc.c
        other-licenses/lzma/LzmaEnc.h
        other-licenses/lzma/LzmaLib.c
        other-licenses/lzma/LzmaLib.h
        other-licenses/lzma/Threads.h
        other-licenses/lzma/Types.h
        other-licenses/valgrind/memcheck.h
        other-licenses/valgrind/valgrind.h
        other-licenses/wtf/AddressSpaceRandomization.cpp
        other-licenses/wtf/AddressSpaceRandomization.h
        other-licenses/wtf/Atomics.h
        other-licenses/wtf/Compiler.h
        other-licenses/wtf/CPU.h
        other-licenses/wtf/OS.h
        other-licenses/wtf/ProcessID.h
        other-licenses/wtf/SpinLock.h
        other-licenses/wtf/WTFExport.h
        other-licenses/zlib/adler32.c
        other-licenses/zlib/compress.c
        other-licenses/zlib/crc32.c
        other-licenses/zlib/crc32.h
        other-licenses/zlib/deflate.c
        other-licenses/zlib/deflate.h
        other-licenses/zlib/gzio.c
        other-licenses/zlib/infback.c
        other-licenses/zlib/inffast.c
        other-licenses/zlib/inffast.h
        other-licenses/zlib/inffixed.h
        other-licenses/zlib/inflate.c
        other-licenses/zlib/inflate.h
        other-licenses/zlib/inftrees.c
        other-licenses/zlib/inftrees.h
        other-licenses/zlib/mozzconf.h
        other-licenses/zlib/trees.c
        other-licenses/zlib/trees.h
        other-licenses/zlib/uncompr.c
        other-licenses/zlib/zconf.h
        other-licenses/zlib/zlib.h
        other-licenses/zlib/zutil.c
        other-licenses/zlib/zutil.h
        pcre/config.h
        pcre/dftables.cpp
        pcre/pcre.h
        pcre/pcre_avmplus.h
        pcre/pcre_chartables.cpp
        pcre/pcre_compile.cpp
        pcre/pcre_config.cpp
        pcre/pcre_dfa_exec.cpp
        pcre/pcre_exec.cpp
        pcre/pcre_fullinfo.cpp
        pcre/pcre_get.cpp
        pcre/pcre_globals.cpp
        pcre/pcre_info.cpp
        pcre/pcre_internal.h
        pcre/pcre_maketables.cpp
        pcre/pcre_newline.cpp
        pcre/pcre_ord2utf8.cpp
        pcre/pcre_refcount.cpp
        pcre/pcre_scanner.cc
        pcre/pcre_scanner.h
        pcre/pcre_scanner_unittest.cc
        pcre/pcre_stringpiece.cc
        pcre/pcre_stringpiece_unittest.cc
        pcre/pcre_study.cpp
        pcre/pcre_tables.cpp
        pcre/pcre_try_flipped.cpp
        pcre/pcre_ucp_findchar.cpp
        pcre/pcre_valid_utf8.cpp
        pcre/pcre_version.cpp
        pcre/pcre_xclass.cpp
        pcre/pcrecpp.cc
        pcre/pcrecpp_unittest.cc
        pcre/pcredemo.cpp
        pcre/pcregrep.cpp
        pcre/pcreposix.cpp
        pcre/pcreposix.h
        pcre/pcretest.cpp
        pcre/ucp.h
        pcre/ucpinternal.h
        pcre/ucptable.cpp
        pcre2/include/pcre2.h
        pcre2/include/stdint.h
        pcre2/src/sljit/sljitConfig.h
        pcre2/src/sljit/sljitConfigInternal.h
        pcre2/src/sljit/sljitExecAllocator.c
        pcre2/src/sljit/sljitLir.c
        pcre2/src/sljit/sljitLir.h
        pcre2/src/sljit/sljitNativeARM_32.c
        pcre2/src/sljit/sljitNativeARM_64.c
        pcre2/src/sljit/sljitNativeARM_T2_32.c
        pcre2/src/sljit/sljitNativeMIPS_32.c
        pcre2/src/sljit/sljitNativeMIPS_64.c
        pcre2/src/sljit/sljitNativeMIPS_common.c
        pcre2/src/sljit/sljitNativePPC_32.c
        pcre2/src/sljit/sljitNativePPC_64.c
        pcre2/src/sljit/sljitNativePPC_common.c
        pcre2/src/sljit/sljitNativeSPARC_32.c
        pcre2/src/sljit/sljitNativeSPARC_common.c
        pcre2/src/sljit/sljitNativeTILEGX-encoder.c
        pcre2/src/sljit/sljitNativeTILEGX_64.c
        pcre2/src/sljit/sljitNativeX86_32.c
        pcre2/src/sljit/sljitNativeX86_64.c
        pcre2/src/sljit/sljitNativeX86_common.c
        pcre2/src/sljit/sljitUtils.c
        pcre2/src/config.h
        pcre2/src/dftables.c
        pcre2/src/pcre2.h
        pcre2/src/pcre2_auto_possess.c
        pcre2/src/pcre2_chartables.c
        pcre2/src/pcre2_compile.c
        pcre2/src/pcre2_config.c
        pcre2/src/pcre2_context.c
        pcre2/src/pcre2_dfa_match.c
        pcre2/src/pcre2_error.c
        pcre2/src/pcre2_internal.h
        pcre2/src/pcre2_intmodedep.h
        pcre2/src/pcre2_jit_compile.c
        pcre2/src/pcre2_jit_match.c
        pcre2/src/pcre2_jit_misc.c
        pcre2/src/pcre2_jit_test.c
        pcre2/src/pcre2_maketables.c
        pcre2/src/pcre2_match.c
        pcre2/src/pcre2_match_data.c
        pcre2/src/pcre2_newline.c
        pcre2/src/pcre2_ord2utf.c
        pcre2/src/pcre2_pattern_info.c
        pcre2/src/pcre2_printint.c
        pcre2/src/pcre2_serialize.c
        pcre2/src/pcre2_string_utils.c
        pcre2/src/pcre2_study.c
        pcre2/src/pcre2_substitute.c
        pcre2/src/pcre2_substring.c
        pcre2/src/pcre2_tables.c
        pcre2/src/pcre2_ucd.c
        pcre2/src/pcre2_ucp.h
        pcre2/src/pcre2_valid_utf.c
        pcre2/src/pcre2_xclass.c
        pcre2/src/pcre2demo.c
        pcre2/src/pcre2grep.c
        pcre2/src/pcre2posix.c
        pcre2/src/pcre2posix.h
        pcre2/src/pcre2test.c
        pcre2/src/stdint.h
        platform/android/android_cpuid.cpp
        platform/arm/MathUtilsUnix-inlines.h
        platform/arm/MathUtilsUnix.cpp
        platform/arm/OSDepUnix.cpp
        platform/mac/mac-platform.h
        platform/symbian/MathUtilsSymbian.cpp
        platform/symbian/OSDepSymbian.cpp
        platform/symbian/symbian-platform.h
        platform/symbian/SymbianHeap.cpp
        platform/symbian/SymbianHeap.h
        platform/symbian/SymbianJITHeap.cpp
        platform/symbian/SymbianJITHeap.h
        platform/unix/MathUtilsSolaris-inlines.h
        platform/unix/MathUtilsSolaris.cpp
        platform/unix/MathUtilsUnix-inlines.h
        platform/unix/MathUtilsUnix.cpp
        platform/unix/OSDepUnix.cpp
        platform/unix/solariscpuid.cpp
        platform/unix/unix-platform.h
        platform/unix/unixcpuid.cpp
        platform/win32/avmplus.cpp
        platform/win32/coff.cpp
        platform/win32/coff.h
        platform/win32/MathUtilsWin-inlines.h
        platform/win32/MathUtilsWin.cpp
        platform/win32/nanojit.cpp
        platform/win32/NativeFunctionWin.cpp
        platform/win32/OSDepWin.cpp
        platform/win32/Vtune.cpp
        platform/win32/win32-platform.h
        platform/win32/win32cpuid.cpp
        platform/win32/win32setjmp.cpp
        platform/winrt/OSDepWinRT.cpp
        platform/system-selection.h
        shell/avmshell-aot-fields.cpp
        shell/avmshell-features.h
        shell/avmshell.cpp
        shell/avmshell.h
        shell/avmshellMac.cpp
        shell/avmshellSymbian.cpp
        shell/avmshellUnix.cpp
        shell/avmshellWin.cpp
        shell/ConsoleOutputStream.cpp
        shell/ConsoleOutputStream.h
        shell/DebugCLI.cpp
        shell/DebugCLI.h
        shell/DomainClass.cpp
        shell/DomainClass.h
        shell/File.h
        shell/FileClass.cpp
        shell/FileClass.h
        shell/FileInputStream.cpp
        shell/FileInputStream.h
        shell/Platform.h
        shell/PosixFile.cpp
        shell/PosixFile.h
        shell/PosixPartialPlatform.cpp
        shell/PosixPartialPlatform.h
        shell/ShellCore.cpp
        shell/ShellCore.h
        shell/ShellWorkerDomainGlue.cpp
        shell/ShellWorkerDomainGlue.h
        shell/ShellWorkerGlue.cpp
        shell/ShellWorkerGlue.h
        shell/swf.cpp
        shell/SystemClass.cpp
        shell/SystemClass.h
        shell/WinFile.cpp
        shell/WinFile.h
        utils/avmc/ActionBlockConstants.cpp
        utils/avmc/ActionBlockConstants.h
        utils/avmc/avmc.cpp
        utils/avmc/avmplus.h
        utils/nanojit-lirasm/lirasm/lirasm.cpp
        utils/nanojit-lirasm/VMPI.nj/avmplus.cpp
        utils/nanojit-lirasm/VMPI.nj/avmplus.h
        utils/nanojit-lirasm/VMPI.nj/VMPI.cpp
        utils/nanojit-lirasm/VMPI.nj/VMPI.h
        utils/sharkprof/dinkuuid.cpp
        utils/sharkprof/log2s.cpp
        utils/sharkprof/logconv.cpp
        utils/wmremote/avmremote/avmremote.cpp
        utils/wmremote/avmremote/stdafx.cpp
        utils/wmremote/avmremote/stdafx.h
        utils/wmremote/ceremotedeployer/ceremotedeployer.cpp
        utils/wmremote/ceremotedeployer/stdafx.cpp
        utils/wmremote/ceremotedeployer/stdafx.h
        utils/wmremote/ceremoteshell/ceremoteshell.cpp
        utils/wmremote/ceremoteshell/stdafx.cpp
        utils/wmremote/ceremoteshell/stdafx.h
        utils/wmremote/wmrunner/resourceppc.h
        utils/wmremote/wmrunner/stdafx.cpp
        utils/wmremote/wmrunner/stdafx.h
        utils/wmremote/wmrunner/wmrunner.cpp
        utils/wmremote/wmrunner/wmrunner.h
        utils/superwordprof.c
        vmbase/unittest/vmbase_concurrency_test.cpp
        vmbase/unittest/vmbase_safepoints_test.cpp
        vmbase/unittest/vmbase_threads_test.cpp
        vmbase/Safepoint-inlines.h
        vmbase/Safepoint.cpp
        vmbase/Safepoint.h
        vmbase/VMAssert.h
        vmbase/vmbase-inlines.h
        vmbase/vmbase.h
        vmbase/VMThread-inlines.h
        vmbase/VMThread.cpp
        vmbase/VMThread.h
        VMPI/GenericPortUtils.cpp
        VMPI/MacDebugUtils.cpp
        VMPI/MacPortUtils.cpp
        VMPI/PosixPortUtils.cpp
        VMPI/PosixSpecificUtils.cpp
        VMPI/SymbianDebugUtils.cpp
        VMPI/SymbianPortUtils.cpp
        VMPI/ThreadsPosix-inlines.h
        VMPI/ThreadsPosix.cpp
        VMPI/ThreadsWin.cpp
        VMPI/ThreadsWinRT.cpp
        VMPI/UnixDebugUtils.cpp
        VMPI/VMPI.h
        VMPI/WinDebugUtils.cpp
        VMPI/WinPortUtils.cpp
        VMPI/WinRTDebugUtils.cpp
        vprof/testVprofMT.c
        vprof/vprof.cpp
        vprof/vprof.h)
